--------------------------------------------------------------------------
---------                  Ampache -- CHANGELOG                  ---------   
--------------------------------------------------------------------------

--------------------------------------------------------------------------
  v.3.3.2-Beta2 
  	- Fixed a problem with the Image Resize code which wasn't correctly
		detecting the lack of GD causing no art to be displayed
  	- Fixed Remember Me button (part of the vauth)
  	- Added new Session Handling code called vauth (Vollmer's Auth)
  	- Moved xml-rpc server file to /server/xmlrpc.server.php keeping 
		with the location of the ajax server mojo.. This will 
		break compatiblity with previous versions, sorry!
  	- Added ability to search from non-us amazon webservices website
		and retrive more then one page (Thx nhorloc)

--------------------------------------------------------------------------
  v.3.3.2-Beta1 01/08/2006
  	- Fixed lack of Access List check on download 
  	- Fixed Access List so that you can edit existing records
  	- Fixed counting error when using the /bin/catalog_update.php.inc
		script
  	- Fixed some minor theme issues with the built in themes
  	- Fixed some RSS problems, and linked it on header (Thx pb1dft)
  	- Fixed bug where you couldn't delete admin users because of an
		overzelous permission check
  	- Fixed Search Album art page so it correctly shows results
		(Thx nhorlock)
  	- Fixed stylesheet so all old Themes work again (Thx Sigger)
  	- Added Normalize Tracks function to playlist which makes track
		numbers contiguous
	- Fixed ordering on Playlists under new code
  	- Added the Import From File action for playlists back. The link
		was just missing
  	- Fixed SQL errors with Windows + Mysql5.x songs with empty 
		genres, are now given a Unknown genre value (Thx WarrenG)
  	- Rewrote entire Playlist class and document to use the new id
		field in database, also added support for playlist tracks