@@ -1,7 +1,7 @@
 <?php
 /*
 
- Copyright 2001 - 2005 Ampache.org
+ Copyright 2001 - 2006 Ampache.org
  All Rights Reserved
 
  This program is free software; you can redistribute it and/or
@@ -21,7 +21,7 @@
 */
 
 $no_session = true;
-require_once('modules/init.php');
+require_once('../modules/init.php');
 
 
 if (conf('xml_rpc')) { 
