@@ -4,6 +4,8 @@
 
 --------------------------------------------------------------------------
   v.3.3.2-Beta2 
+  	- Fixed a few typos in the xmlrpc code and playlists and fixed the
+		weird skipping when seeking using some players (Thx Sven)
   	- Fixed a problem with the Image Resize code which wasn't correctly
 		detecting the lack of GD causing no art to be displayed
   	- Fixed Remember Me button (part of the vauth)
